naprawy swaggera
